In machine_learning_template.ipynb > Project Overview: Update Objectives and move Objectives, Value Proposition and Business Requirements up

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -55,23 +55,11 @@
     "**Problem**  \n",
     "Determining rental prices is challenging due to the complex interactions between the many factors involved, including property characteristics (e.g., size, bedrooms, amenities), location (e.g., neighborhood, proximity to public transport), and market dynamics (e.g., trends in demand, seasonality). Traditional estimation methods can be subjective and inconsistent. Machine learning offers enhanced predictive capability by capturing non-linear patterns and intricate dependencies in property data, enabling more accurate rental price predictions.\n",
     "\n",
-    "**Data**  \n",
-    "The dataset comprises historical rental listings collected from Zillow and consists of:\n",
-    "\n",
-    "- Target Variable: Monthly rent in €.\n",
-    "- Features: Property size in m², number of bedrooms and bathrooms, property type (e.g., apartment), neighborhood (e.g., Charlottenburg), built year, furnishing, heating type, amenities (e.g., balcony).\n",
-    "- Example Data:\n",
-    "\n",
-    "| Size (m²)  | Bedrooms | Bathrooms | Property Type      | Neighborhood     | Built Year | Furnishing | Heating  | Amenities          | Monthly Rent (€) |\n",
-    "| :----------| :------- | :-------- | :----------------- | :--------------- | :--------- | :--------- | :------- |:------------------ | :--------------- |\n",
-    "| 80         | 2        | 1         | Apartment          | Prenzlauer Berg  | 1990       | Yes        | Gas      | Balcony, Elevator  | 1200             |\n",
-    "| 120        | 3        | 2         | House              | Charlottenburg   | 2005       | No         | Electric | Garden, Parking    | 2500             |\n",
-    "\n",
     "**Objectives**  \n",
     "The project aims to:\n",
-    "- Develop a machine learning model to accurately predict rental prices.\n",
-    "- Compare different models (e.g., Linear Regression, Random Forest, XGBoost) to determine the best-performing one using evaluation metrics like RMSE, MAPE, and R-squared.\n",
-    "- Identify the key factors that drive rental prices by analyzing feature importance.\n",
+    "- Develop a machine learning model to accurately predict rental prices based on information from property listings.\n",
+    "- Compare different models (e.g., Linear Regression, Random Forest, XGBoost) using suitable evaluation metrics (e.g., RMSE, MAPE, R-squared).\n",
+    "- Identify key price drivers through feature importance analysis\n",
     "\n",
     "**Value Proposition**  \n",
     "This project provides actionable, data-driven insights for key stakeholders:\n",
@@ -86,6 +74,18 @@
     "- Market Adaptability: The model should adjust predictions based on market trends (e.g., seasonality, neighborhood demand).  \n",
     "- Scalability: The model must be adaptable to new regions with minimal adjustments.  \n",
     "- Real-Time Predictions: Predictions should be updated regularly, reflecting current market conditions.\n",
+    "\n",
+    "**Data**  \n",
+    "The dataset comprises historical rental listings collected from Zillow and consists of:\n",
+    "\n",
+    "- Target Variable: Monthly rent in €.\n",
+    "- Features: Property size in m², number of bedrooms and bathrooms, property type (e.g., apartment), neighborhood (e.g., Charlottenburg), built year, furnishing, heating type, amenities (e.g., balcony).\n",
+    "- Example Data:\n",
+    "\n",
+    "| Size (m²)  | Bedrooms | Bathrooms | Property Type      | Neighborhood     | Built Year | Furnishing | Heating  | Amenities          | Monthly Rent (€) |\n",
+    "| :----------| :------- | :-------- | :----------------- | :--------------- | :--------- | :--------- | :------- |:------------------ | :--------------- |\n",
+    "| 80         | 2        | 1         | Apartment          | Prenzlauer Berg  | 1990       | Yes        | Gas      | Balcony, Elevator  | 1200             |\n",
+    "| 120        | 3        | 2         | House              | Charlottenburg   | 2005       | No         | Electric | Garden, Parking    | 2500             |\n",
     "\n",
     "**Technical Requirements**  \n",
     "The project must meet the following technical requirements:  \n",
