In machine_learning_template.ipynb > Project Overview section: Rename Business Requirements section to Business Goals and update goals

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -56,7 +56,6 @@
     "Determining rental prices is challenging due to the complex interactions between the many factors involved, including property characteristics (e.g., size, bedrooms, amenities), location (e.g., neighborhood, proximity to public transport), and market dynamics (e.g., trends in demand, seasonality). Traditional estimation methods can be subjective and inconsistent. Machine learning offers enhanced predictive capability by capturing non-linear patterns and intricate dependencies in property data, enabling more accurate rental price predictions.\n",
     "\n",
     "**Objectives**  \n",
-    "The project aims to:\n",
     "- Develop a machine learning model to accurately predict rental prices based on information from property listings.\n",
     "- Compare different models (e.g., Linear Regression, Random Forest, XGBoost) using suitable evaluation metrics (e.g., RMSE, MAPE, R-squared).\n",
     "- Identify key price drivers through feature importance analysis\n",
@@ -68,12 +67,9 @@
     "- Investors: Evaluate property investment opportunities based on potential rental income and returns.\n",
     "- Market Analysts: Gain insights into rental price trends, key influencing factors, and market dynamics.\n",
     "\n",
-    "**Business Requirements**  \n",
-    "The project must meet the following business requirements:  \n",
-    "- Predictive Accuracy: The model should predict rental prices within 10% of actual prices for 80% of listings.  \n",
-    "- Market Adaptability: The model should adjust predictions based on market trends (e.g., seasonality, neighborhood demand).  \n",
-    "- Scalability: The model must be adaptable to new regions with minimal adjustments.  \n",
-    "- Real-Time Predictions: Predictions should be updated regularly, reflecting current market conditions.\n",
+    "**Business Goals**  \n",
+    "- Increase rental revenue by 5%-10% within 12 months of model deployment: By accurately predicting competitive rental prices, landlords can optimize their pricing strategies and reduce vacancy rates.  \n",
+    "- Cut time spent on rental price evaluation by 30%-40%: Automate the price-setting process with the model, reducing the time needed for landlords, property managers, and investors to evaluate property pricing compared to traditional manual methods.\n",
     "\n",
     "**Data**  \n",
     "The dataset comprises historical rental listings collected from Zillow and consists of:\n",
