In machine_learning_template.ipynb > Project Overview section: Update Technical Requirements

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -84,13 +84,27 @@
     "| 120        | 3        | 2         | House              | Charlottenburg   | 2005       | No         | Electric | Garden, Parking    | 2500             |\n",
     "\n",
     "**Technical Requirements**  \n",
-    "The project must meet the following technical requirements:  \n",
-    "- Data Preprocessing: Load, clean, transform, and save data using Python and libraries like Pandas and Scikit-learn.\n",
-    "- Exploratory Data Analysis (EDA): Analyze descriptive statistics and visualize distributions with Pandas, NumPy, Seaborn, and Matplotlib.\n",
-    "- Modeling: Train and evaluate different machine learning models using Scikit-learn and XGBoost.  \n",
-    "- Deployment: Deploy the final model as a REST API for easy integration with existing platforms.  \n",
-    "    - Scalability: The model should handle datasets of up to 1 million data points and deliver predictions in under 2 minutes.  \n",
-    "    - Cloud Infrastructure: Use cloud platforms (e.g., AWS, Microsoft Azure, Google Cloud Platform) for scalable deployment."
+    "- Data Preprocessing:\n",
+    "  - Load, clean, transform, and save data using `pandas` and `sklearn`.\n",
+    "  - Handle duplicates, data types, missing values, and outliers.\n",
+    "  - Extract features, scale numerical features, and encode categorical features.\n",
+    "- Exploratory Data Analysis (EDA):\n",
+    "  - Analyze descriptive statistics using `pandas` and `numpy`.\n",
+    "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
+    "- Exploratory Data Analysis (EDA):\n",
+    "  - Analyze descriptive statistics using `pandas` and `numpy`.\n",
+    "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
+    "- Modeling:\n",
+    "  - Train baseline models and perform hyperparameter tuning for regression task with `sklearn` and `xgboost`.\n",
+    "  - Baseline models: Linear Regression, K-Nearest Neighbors, Support Vector Machine, Random Forest, Multi-Layer Perceptron, XGBoost.\n",
+    "  - Evaluate model performance using Root Mean Squared Error (RMSE), Mean Absolute Percentage Error (MAPE), and R-squared (R2).\n",
+    "    - Success criteria: Maximum RMSE of 1200, maximum MAPE of 0.15, and minimum R2 of 0.80 on the test data.\n",
+    "  - Visualize feature importance, show model prediction examples, and save the final model with `pickle`.\n",
+    "- Deployment:\n",
+    "  - Expose the final model via a REST API for easy integration with existing platforms.  \n",
+    "  - Implement batch processing capabilities to deliver predictions for up to 1 million data points in under 2 minutes.  \n",
+    "  - Deploy on cloud infrastructure (e.g., AWS, Microsoft Azure, Google Cloud Platform) to ensure scalability.\n",
+    "  - Set up model performance monitoring and data drift detection."
    ]
   },
   {
