--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -72,16 +72,32 @@
     "- Cut time spent on rental price evaluation by 30%-40%: Automate the price-setting process with the model, reducing the time needed for landlords, property managers, and investors to evaluate property pricing compared to traditional manual methods.\n",
     "\n",
     "**Data**  \n",
-    "The dataset comprises historical rental listings collected from Zillow and consists of:\n",
+    "The dataset contains historical information from rental properties in Berlin listed on Zillow between 2023-09-01 and 2024-08-31, provided in a single `.csv` file.\n",
     "\n",
-    "- Target Variable: Monthly rent in €.\n",
-    "- Features: Property size in m², number of bedrooms and bathrooms, property type (e.g., apartment), neighborhood (e.g., Charlottenburg), built year, furnishing, heating type, amenities (e.g., balcony).\n",
-    "- Example Data:\n",
+    "Dataset Statistics:\n",
+    "- Dataset size: 44,300 records\n",
+    "- Target variable: Monthly Rent\n",
+    "- Features: 9  \n",
     "\n",
-    "| Size (m²)  | Bedrooms | Bathrooms | Property Type      | Neighborhood     | Built Year | Furnishing | Heating  | Amenities          | Monthly Rent (€) |\n",
-    "| :----------| :------- | :-------- | :----------------- | :--------------- | :--------- | :--------- | :------- |:------------------ | :--------------- |\n",
-    "| 80         | 2        | 1         | Apartment          | Prenzlauer Berg  | 1990       | Yes        | Gas      | Balcony, Elevator  | 1200             |\n",
-    "| 120        | 3        | 2         | House              | Charlottenburg   | 2005       | No         | Electric | Garden, Parking    | 2500             |\n",
+    "Data Overview Table:\n",
+    "| Column | Description | Storage Type | Semantic Type | Theoretical Range | Observed Range |\n",
+    "| :--- | :--- | :--- | :--- | :--- | :--- |\n",
+    "| Monthly Rent | Rental price per month in euros | Integer | Numerical | [0, ∞] | [600, 3100] |\n",
+    "| Size | Living space in square meters | Float | Numerical | [0, ∞] | [30, 240] |\n",
+    "| Bedrooms | Number of bedrooms | Integer | Numerical | [0, ∞] | [1, 6] |\n",
+    "| Bathrooms | Number of bathrooms | Integer | Numerical | [0, ∞] | [1, 4] |\n",
+    "| Property Type | Category of property | String | Categorical (Nominal) | Any property type [e.g., \"Apartment\", \"House\"] | 8 unique property types |\n",
+    "| Neighborhood | District within Berlin | String | Categorical (Nominal) | Any Berlin district [e.g., \"Prenzlauer Berg\", \"Charlottenburg\"] | 12 unique districts |\n",
+    "| Built Year | Year of construction | Integer | Numerical | [1600, 2024] | [1904, 2024] |\n",
+    "| Furnishing | Whether property is furnished | String | Categorical (Binary) | [\"Yes\", \"No\"] | [\"Yes\", \"No\"] |\n",
+    "| Heating | Type of heating system | String | Categorical (Nominal) | Any heating type [e.g., \"Gas\", \"Electric\"] | 8 unique heating types |\n",
+    "| Amenities | Available features | String | Categorical (List) | Any combination of amenities | [List common amenities] |\n",
+    "\n",
+    "Example Data:\n",
+    "| Size (m²) | Bedrooms | Bathrooms | Property Type | Neighborhood | Built Year | Furnishing | Heating | Amenities | Monthly Rent (€) |\n",
+    "| :-------- | :------- | :-------- | :----------- | :----------- | :--------- | :--------- | :------ | :-------- | :-------------- |\n",
+    "| 80 | 2 | 1 | Apartment | Prenzlauer Berg | 1990 | Yes | Gas | Balcony, Elevator, River View | 1200 |\n",
+    "| 120 | 3 | 2 | House | Charlottenburg | 2005 | No | Electric | Garden, Parking, Newly Renovated | 2500 |\n",
     "\n",
     "**Technical Requirements**  \n",
     "- Data Preprocessing:\n",
@@ -97,8 +113,8 @@
     "- Modeling:\n",
     "  - Train baseline models and perform hyperparameter tuning for regression task with `sklearn` and `xgboost`.\n",
     "  - Baseline models: Linear Regression, K-Nearest Neighbors, Support Vector Machine, Random Forest, Multi-Layer Perceptron, XGBoost.\n",
-    "  - Evaluate model performance using Root Mean Squared Error (RMSE), Mean Absolute Percentage Error (MAPE), and R-squared (R2).\n",
-    "    - Success criteria: Maximum RMSE of 1200, maximum MAPE of 0.15, and minimum R2 of 0.80 on the test data.\n",
+    "  - Evaluate model performance using Root Mean Squared Error (RMSE), Mean Absolute Percentage Error (MAPE), and R-squared (R²).\n",
+    "    - Success criteria: Maximum RMSE of 1200, maximum MAPE of 0.15, and minimum R² of 0.80 on the test data.\n",
     "  - Visualize feature importance, show model prediction examples, and save the final model with `pickle`.\n",
     "- Deployment:\n",
     "  - Expose the final model via a REST API for easy integration with existing platforms.  \n",
