In machine_learning_template.ipynb > Project Overview section: Update Data Overview Table

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -86,12 +86,12 @@
     "| Size | Living space in square meters | Float | Numerical | [0, ∞] | [30, 240] |\n",
     "| Bedrooms | Number of bedrooms | Integer | Numerical | [0, ∞] | [1, 6] |\n",
     "| Bathrooms | Number of bathrooms | Integer | Numerical | [0, ∞] | [1, 4] |\n",
-    "| Property Type | Category of property | String | Categorical (Nominal) | Any property type [e.g., \"Apartment\", \"House\"] | 8 unique property types |\n",
-    "| Neighborhood | District within Berlin | String | Categorical (Nominal) | Any Berlin district [e.g., \"Prenzlauer Berg\", \"Charlottenburg\"] | 12 unique districts |\n",
+    "| Property Type | Category of property | String | Categorical (Nominal) | Any property type [e.g., \"Apartment\", \"House\"] | 8 unique types |\n",
+    "| Neighborhood | District within Berlin | String | Categorical (Nominal) | Any Berlin district [e.g., \"Charlottenburg\"] | 12 unique districts |\n",
     "| Built Year | Year of construction | Integer | Numerical | [1600, 2024] | [1904, 2024] |\n",
     "| Furnishing | Whether property is furnished | String | Categorical (Binary) | [\"Yes\", \"No\"] | [\"Yes\", \"No\"] |\n",
-    "| Heating | Type of heating system | String | Categorical (Nominal) | Any heating type [e.g., \"Gas\", \"Electric\"] | 8 unique heating types |\n",
-    "| Amenities | Available features | String | Categorical (List) | Any combination of amenities | [List common amenities] |\n",
+    "| Heating | Type of heating system | String | Categorical (Nominal) | Any heating type [e.g., \"Gas\", \"Electric\"] | 8 unique types |\n",
+    "| Amenities | Available features (comma-separated list) | String | Categorical | Any combination of amenities [e.g., \"Balcony, Elevator\"] | 34 unique amenities |\n",
     "\n",
     "Example Data:\n",
     "| Size (m²) | Bedrooms | Bathrooms | Property Type | Neighborhood | Built Year | Furnishing | Heating | Amenities | Monthly Rent (€) |\n",
