In machine_learning_template.ipynb > Data Preprocessing section: Add Handling Column Names section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -210,7 +210,7 @@
    "metadata": {},
    "source": [
     "## CSV \n",
-    "Load data from a .csv file into a Pandas DataFrame."
+    "Load data from a `.csv` file into a Pandas DataFrame."
    ]
   },
   {
@@ -313,6 +313,31 @@
    "metadata": {},
    "source": [
     "# Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "030b4bf1-d5e2-471e-9303-1afc4bcd2fcf",
+   "metadata": {},
+   "source": [
+    "## Handling Column Names\n",
+    "Convert all column names to snake_case for consistency, improved readability, and to minimize the risk of errors. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c6fe64a2-0a4c-4fdb-b87e-3fe3353eb59d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert column names to snake_case\n",
+    "df.columns = (\n",
+    "    df.columns\n",
+    "    .str.strip()  # Remove leading/trailing spaces\n",
+    "    .str.lower()  # Convert to lowercase\n",
+    "    .str.replace(r\"[-/\\s+]\", \"_\", regex=True)  # Replace spaces and special characters with \"_\"\n",
+    ")"
    ]
   },
   {
