In machine_learning_template.ipynb > Data Preprocessing > Handling Duplicates section: Separate handling duplicates based on the ID column vs based on a combination of specific columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Diagnose duplicates \n",
+    "# Identify duplicates based on all columns\n",
     "df.duplicated().value_counts()"
    ]
   },
@@ -380,10 +380,40 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a51b2986-ba9a-4182-9ae7-de5cc89cb98c",
+   "metadata": {},
+   "source": [
+    "Duplicates based on the ID column:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "537fe17b-3b29-4c37-a016-0034d582e8e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify duplicates based on the ID column\n",
+    "df.duplicated([\"id\"]).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a448227-a451-4260-a196-05918a9dc220",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove duplicates\n",
+    "df = df.drop_duplicates([\"id\"]).copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a55f43e8-f544-414c-8979-d3a52b0b919d",
    "metadata": {},
    "source": [
-    "Duplicates based on specific columns, e.g. the ID column or a combination of columns:"
+    "Duplicates based on a combination of specific columns:"
    ]
   },
   {
@@ -393,8 +423,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Diagnose duplicates\n",
-    "df.duplicated(subset=[\"column_1\", \"column_2\", \"column_3\"]).value_counts()"
+    "# Identify duplicates based on a combination of specific columns\n",
+    "df.duplicated([\"column_1\", \"column_2\", \"column_3\"]).value_counts()"
    ]
   },
   {
@@ -405,7 +435,7 @@
    "outputs": [],
    "source": [
     "# Remove duplicates\n",
-    "df = df.drop_duplicates(subset=[\"column_1\", \"column_2\", \"column_3\"]).copy()"
+    "df = df.drop_duplicates([\"column_1\", \"column_2\", \"column_3\"]).copy()"
    ]
   },
   {
