In machine_learning_template.ipynb > Data Preprocessing > Handling Incorrect Data Types section: Rename section Handling Data Types and add subsection for Converting Storage Type and Defining Semantic Type

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -443,7 +443,15 @@
    "id": "eb28c409-34a3-493f-8cd9-856b5c25e0d3",
    "metadata": {},
    "source": [
-    "## Handling Incorrect Data Types"
+    "## Handling Data Types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd4abe24-5ad8-45ad-9723-504da71afcac",
+   "metadata": {},
+   "source": [
+    "### Converting Storage Type"
    ]
   },
   {
@@ -466,6 +474,15 @@
    "source": [
     "# Convert column from str to datetime\n",
     "df[\"datetime_column\"] = pd.to_datetime(df[\"str_column\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c07551e9-a294-4613-b0be-a39344705a35",
+   "metadata": {},
+   "source": [
+    "### Defining Semantic Type  \n",
+    "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
    ]
   },
   {
