In machine_learning_template.ipynb > Data Preprocessing > Handling Data Types > Defining Semantic Type section: Move code for manual and programmatic approach from EDA section to this section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -487,6 +487,61 @@
   },
   {
    "cell_type": "markdown",
+   "id": "faa92ad5-95b0-4305-b135-2d13b639a952",
+   "metadata": {},
+   "source": [
+    "#### Manual  \n",
+    "Option 1: Use the manual approach for small datasets or when you have specific requirements and need precise control."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa784e26-d252-4266-aa76-bbfb1f028f07",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show column names and storage data type\n",
+    "df.dtypes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e4452cb-b80a-4384-9c2a-6fb4a5af21e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define semantic column types manually\n",
+    "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
+    "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
+    "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d724833f-6e94-4657-8b03-3897853504e4",
+   "metadata": {},
+   "source": [
+    "#### Programmatic  \n",
+    "Option 2: Use the programmatic approach for large datasets or when you need to automate the process, ensuring efficiency and scalability in handling column types."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2677b80d-6a5a-4cd0-9028-8c9710c78977",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define semantic column types programmatically based on pandas data types\n",
+    "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
+    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
+    "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "47ff6c41-2244-462e-968a-9e8473a89ed6",
    "metadata": {},
    "source": [
@@ -916,70 +971,6 @@
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis (EDA)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "571beab2-bbb5-4fba-8143-69b04a5ea2c8",
-   "metadata": {},
-   "source": [
-    "## Defining Column Types  \n",
-    "Define numerical, categorical and boolean columns for downstream tasks like exploratory data analysis, additional preprocessing steps, and machine learning."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b14f5252-3567-42a7-8ef2-13f52c6a4ec6",
-   "metadata": {},
-   "source": [
-    "### Manual  \n",
-    "Option 1: Use the manual approach for small datasets or when you have specific requirements and need precise control."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31d48ac1-c330-43f6-b460-bf5b57c9acb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Show columns and their pandas data types\n",
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e6838b9e-f03b-4791-abd6-ab1c0565e4fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define column types manually\n",
-    "numerical_columns = [\"numerical_column_1\", \"numerical_column_2\", \"numerical_column_3\"]\n",
-    "categorical_columns = [\"categorical_column_1\", \"categorical_column_2\", \"categorical_column_3\"]\n",
-    "boolean_columns = [\"boolean_column_1\", \"boolean_column_2\", \"boolean_column_3\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "919c7d33-ac8c-4385-8d16-8bdab200eeed",
-   "metadata": {},
-   "source": [
-    "### Programmatic  \n",
-    "Option 2: Use the programmatic approach for large datasets or when you need to automate the process, ensuring efficiency and scalability in handling column types."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b1ce92eb-c2b8-4fcf-83c6-1ae149b0a99a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define column types programmatically based on pandas data types\n",
-    "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
-    "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
-    "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
    ]
   },
   {
