In machine_learning_template.ipynb > Data Preprocessing > Handling Data Types > Converting Storage Type section: Add code to convert object columns with two unique categories to boolean columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -455,6 +455,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "40cb6e08-4ce6-475c-a850-af4938b740f6",
+   "metadata": {},
+   "source": [
+    "Identify incorrect storage data types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "93a666c9-9037-4de3-9c46-3aa9e7fd3776",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Show storage data types\n",
+    "df.dtypes()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "686fe1ad-4a13-4a0d-a23c-3ae827b1be1d",
+   "metadata": {},
+   "source": [
+    "Convert incorrect data types:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5d92d718-ec5a-491c-873b-f2b8230f71a7",
@@ -474,6 +501,36 @@
    "source": [
     "# Convert column from str to datetime\n",
     "df[\"datetime_column\"] = pd.to_datetime(df[\"str_column\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1a5059d1-bc0d-4a7f-8d65-bdcee4328403",
+   "metadata": {},
+   "source": [
+    "Convert object columns with two unique categories to boolean columns:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e0c2573-36aa-41b2-994a-4118f925f228",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify object columns with two unique categories \n",
+    "df.select_dtypes(include=[\"object\"]).nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a5686b71-8f6b-48e3-b82f-4498dc7ef48b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert column from object to boolean\n",
+    "df[\"bool_column\"] = df[\"object_column\"].map({\"category_1\": True, \"category_2\": False})"
    ]
   },
   {
@@ -501,7 +558,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show column names and storage data type\n",
+    "# Show storage data types\n",
     "df.dtypes()"
    ]
   },
