In machine_learning_template.ipynb > Data Preprocessing > Handling Missing Values section: Add Identification subsection

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -714,6 +714,25 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a2379de8-3825-4f42-83c7-c2365289c059",
+   "metadata": {},
+   "source": [
+    "#### Identification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f98f545d-2870-472b-a8a6-fdeebbe6e3a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Identify missing values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "83b7806d-1465-4747-8780-b2e28d51a468",
    "metadata": {},
    "source": [
