In machine_learning_template.ipynb > Data Preprocessing > Handling Outliers > Remove with 3SD Method section: Rename section to 3SD Method and update code to handle one or more numerical columns

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -855,8 +855,8 @@
    "id": "e5625577-0d32-402f-bac1-1d4184d765c6",
    "metadata": {},
    "source": [
-    "### Remove with 3SD Method  \n",
-    "Remove univariate outliers from a numerical column by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column.  "
+    "### 3SD Method  \n",
+    "Identify and remove univariate outliers in numerical columns by applying the 3 standard deviation (SD) rule. Specifically, a data point is considered an outlier if it falls more than 3 standard deviations above or below the mean of the column. "
    ]
   },
   {
@@ -866,32 +866,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a custom transformer class to remove outliers using the 3SD method\n",
+    "# Create a custom transformer class to identify and remove outliers using the 3SD method\n",
     "class OutlierRemover3SD(BaseEstimator, TransformerMixin):\n",
-    "    def fit(self, df, numerical_column):\n",
-    "        # Calculate mean, standard deviation, and cutoff values of the numerical column\n",
-    "        self.mean_ = df[numerical_column].mean()\n",
-    "        self.sd_ = df[numerical_column].std()\n",
-    "        self.lower_cutoff_ = self.mean_ - 3 * self.sd_\n",
-    "        self.upper_cutoff_ = self.mean_ + 3 * self.sd_\n",
+    "    def fit(self, df, numerical_columns):\n",
+    "        # Convert single column string to list\n",
+    "        if isinstance(numerical_columns, str):\n",
+    "            numerical_columns = [numerical_columns]\n",
+    "            \n",
+    "        # Calculate statistics (mean, standard deviation, cutoff values) for each column\n",
+    "        self.stats_ = pd.DataFrame(index=numerical_columns)\n",
+    "        self.stats_[\"mean\"] = df[numerical_columns].mean()\n",
+    "        self.stats_[\"sd\"] = df[numerical_columns].std()\n",
+    "        self.stats_[\"lower_cutoff\"] = self.stats_[\"mean\"] - 3 * self.stats_[\"sd\"]\n",
+    "        self.stats_[\"upper_cutoff\"] = self.stats_[\"mean\"] + 3 * self.stats_[\"sd\"]\n",
     "\n",
-    "        # Create a mask for filtering outliers\n",
-    "        self.mask_ = (df[numerical_column] >= self.lower_cutoff_) & (df[numerical_column] <= self.upper_cutoff_)\n",
+    "        # Create masks for filtering outliers \n",
+    "        self.masks_ = (df[numerical_columns] >= self.stats_[\"lower_cutoff\"]) & (df[numerical_columns] <= self.stats_[\"upper_cutoff\"])  # masks by column\n",
+    "        self.final_mask_ = self.masks_.all(axis=1)  # single mask across all columns\n",
     "\n",
-    "        # Show cutoff values and number of outliers\n",
-    "        print(f\"Lower cutoff for {numerical_column}: {self.lower_cutoff_}\")\n",
-    "        print(f\"Upper cutoff for {numerical_column}: {self.upper_cutoff_}\")\n",
-    "        print(f\"{df.shape[0] - df[self.mask_].shape[0]} outliers removed based on {numerical_column} using the 3SD method.\")\n",
+    "        # Calculate number of outliers\n",
+    "        self.stats_[\"outliers\"] = (~self.masks_).sum()  # by column\n",
+    "        self.outliers_ = (~self.final_mask_).sum()  # across all columns\n",
+    "        \n",
+    "        # Show statistics and number of outliers\n",
+    "        print(f\"Statistics and outliers: \\n{self.stats_}\")\n",
+    "        if len(numerical_columns) == 1:\n",
+    "            print(f\"\\n{self.outliers_} rows contain outliers in the '{numerical_columns[0]}' column.\")\n",
+    "        else:\n",
+    "            print(f\"\\n{self.outliers_} rows contain outliers in one or more numerical columns.\")\n",
     "  \n",
     "        return self\n",
     "\n",
     "    def transform(self, df):\n",
-    "        # Remove outliers based on the mask \n",
-    "        return df[self.mask_]\n",
+    "        # Remove outliers based on the final mask\n",
+    "        print(f\"{self.outliers_} rows with outliers removed.\")\n",
+    "        return df[self.final_mask_]\n",
     "\n",
-    "    def fit_transform(self, df, numerical_column):\n",
+    "    def fit_transform(self, df, numerical_columns):\n",
     "        # Perform both fit and transform \n",
-    "        return self.fit(df, numerical_column).transform(df)"
+    "        return self.fit(df, numerical_columns).transform(df)"
    ]
   },
   {
@@ -904,8 +917,8 @@
     "# Initialize outlier remover \n",
     "outlier_remover_3sd = OutlierRemover3SD()\n",
     "\n",
-    "# Remove outliers\n",
-    "df = outlier_remover_3sd.fit_transform(df, \"numerical_column\")"
+    "# Identify and remove outliers\n",
+    "df = outlier_remover_3sd.fit_transform(df, numerical_columns)"
    ]
   },
   {
