In machine_learning_template.ipynb, update Project Overview section

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -53,12 +53,12 @@
     "This project aims to build a machine learning model to predict rental prices for properties in Berlin using historical data from property listings. The model will enable stakeholders like landlords, tenants, investors, and market analysts to make data-driven decisions about rental prices, property investments, and market analysis through automated property evaluations.\n",
     "\n",
     "**Problem**  \n",
-    "Determining rental prices is challenging due to the complex interactions between the many factors involved, including property characteristics (e.g., size, bedrooms, amenities), location (e.g., neighborhood, proximity to public transport), and market dynamics (e.g., trends in demand, seasonality). Traditional estimation methods can be subjective and inconsistent. Machine learning offers enhanced predictive capability by capturing non-linear patterns and intricate dependencies in property data, enabling more accurate rental price predictions.\n",
+    "Determining rental prices is challenging due to the complex interactions between the many factors involved, such as property characteristics (e.g., size, bedrooms, amenities), location (e.g., neighborhood, access to public transport), and market dynamics (e.g., trends in demand, seasonality). Traditional estimation methods can be subjective and inconsistent. Machine learning offers enhanced predictive capability by capturing non-linear patterns and intricate dependencies in property data, enabling more accurate rental price predictions.\n",
     "\n",
     "**Objectives**  \n",
     "- Develop a machine learning model to accurately predict rental prices based on information from property listings.\n",
-    "- Compare different models (e.g., Linear Regression, Random Forest, XGBoost) using suitable evaluation metrics (e.g., RMSE, MAPE, R-squared).\n",
-    "- Identify key price drivers through feature importance analysis\n",
+    "- Compare different models (e.g., Linear Regression, Random Forest, XGBoost) using suitable evaluation metrics (e.g., RMSE, MAPE, R²).\n",
+    "- Identify key price drivers through feature importance analysis.\n",
     "\n",
     "**Value Proposition**  \n",
     "This project provides actionable, data-driven insights for key stakeholders:\n",
@@ -76,7 +76,7 @@
     "\n",
     "Dataset Statistics:\n",
     "- Dataset size: 44,300 records\n",
-    "- Target variable: Monthly Rent\n",
+    "- Target variable: Monthly rent\n",
     "- Features: 9  \n",
     "\n",
     "Data Overview Table:\n",
@@ -107,9 +107,6 @@
     "- Exploratory Data Analysis (EDA):\n",
     "  - Analyze descriptive statistics using `pandas` and `numpy`.\n",
     "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
-    "- Exploratory Data Analysis (EDA):\n",
-    "  - Analyze descriptive statistics using `pandas` and `numpy`.\n",
-    "  - Visualize distributions, correlations, and relationships using `seaborn` and `matplotlib`.\n",
     "- Modeling:\n",
     "  - Train baseline models and perform hyperparameter tuning for regression task with `sklearn` and `xgboost`.\n",
     "  - Baseline models: Linear Regression, K-Nearest Neighbors, Support Vector Machine, Random Forest, Multi-Layer Perceptron, XGBoost.\n",
@@ -118,7 +115,7 @@
     "  - Visualize feature importance, show model prediction examples, and save the final model with `pickle`.\n",
     "- Deployment:\n",
     "  - Expose the final model via a REST API for easy integration with existing platforms.  \n",
-    "  - Implement batch processing capabilities to deliver predictions for up to 1 million data points in under 2 minutes.  \n",
+    "  - Implement batch processing capabilities to deliver predictions for up to 1M data points in under 2 minutes.  \n",
     "  - Deploy on cloud infrastructure (e.g., AWS, Microsoft Azure, Google Cloud Platform) to ensure scalability.\n",
     "  - Set up model performance monitoring and data drift detection."
    ]
