In machine_learning_template.ipynb > Project Overview section: Add details on REST API deployment

--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -114,7 +114,7 @@
     "    - Success criteria: Maximum RMSE of 1200, maximum MAPE of 0.15, and minimum R² of 0.80 on the test data.\n",
     "  - Visualize feature importance, show model prediction examples, and save the final model with `pickle`.\n",
     "- Deployment:\n",
-    "  - Expose the final model via a REST API for easy integration with existing platforms.  \n",
+    "  - Expose the final model via a REST API (e.g., Flask, FastAPI) for easy integration with existing platforms.  \n",
     "  - Implement batch processing capabilities to deliver predictions for up to 1M data points in under 2 minutes.  \n",
     "  - Deploy on cloud infrastructure (e.g., AWS, Microsoft Azure, Google Cloud Platform) to ensure scalability.\n",
     "  - Set up model performance monitoring and data drift detection."
