--- a/machine_learning_template.ipynb
+++ b/machine_learning_template.ipynb
@@ -168,7 +168,7 @@
    "metadata": {},
    "source": [
     "## Environment Variables \n",
-    "**Note**: Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a `.env` file. Using environment variables helps keep such information secure and separate from your codebase."
+    "Note: Setting environment variables is optional, but it is recommended if you store sensitive information (such as API keys or database credentials) in a `.env` file. Using environment variables helps keep such information secure and separate from your codebase."
    ]
   },
   {
@@ -350,7 +350,7 @@
    "id": "ee509a36-86a0-4e56-bbeb-ecb29a809288",
    "metadata": {},
    "source": [
-    "Duplicates based on all columns:"
+    "Identify and remove duplicates based on all columns."
    ]
   },
   {
@@ -380,7 +380,7 @@
    "id": "a51b2986-ba9a-4182-9ae7-de5cc89cb98c",
    "metadata": {},
    "source": [
-    "Duplicates based on the ID column:"
+    "Identify and remove duplicates based on the ID column."
    ]
   },
   {
@@ -410,7 +410,7 @@
    "id": "a55f43e8-f544-414c-8979-d3a52b0b919d",
    "metadata": {},
    "source": [
-    "Duplicates based on a combination of specific columns:"
+    "Identify and remove duplicates based on a combination of specific columns."
    ]
   },
   {
@@ -448,7 +448,7 @@
    "id": "fd4abe24-5ad8-45ad-9723-504da71afcac",
    "metadata": {},
    "source": [
-    "### Converting Storage Type"
+    "### Storage Type"
    ]
   },
   {
@@ -456,7 +456,7 @@
    "id": "40cb6e08-4ce6-475c-a850-af4938b740f6",
    "metadata": {},
    "source": [
-    "Identify incorrect storage data types:"
+    "Identify and convert incorrect storage data types."
    ]
   },
   {
@@ -466,16 +466,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show storage data types\n",
+    "# Identify storage data types\n",
     "df.dtypes()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "686fe1ad-4a13-4a0d-a23c-3ae827b1be1d",
-   "metadata": {},
-   "source": [
-    "Convert incorrect data types:"
    ]
   },
   {
@@ -505,7 +497,7 @@
    "id": "1a5059d1-bc0d-4a7f-8d65-bdcee4328403",
    "metadata": {},
    "source": [
-    "Convert object columns with two unique categories to boolean columns:"
+    "Identify object columns with two unique categories and convert them to boolean columns."
    ]
   },
   {
@@ -535,7 +527,7 @@
    "id": "c07551e9-a294-4613-b0be-a39344705a35",
    "metadata": {},
    "source": [
-    "### Defining Semantic Type  \n",
+    "### Semantic Type  \n",
     "Define semantic column types (numerical, categorical, boolean) for downstream tasks like additional preprocessing steps, exploratory data analysis, and machine learning."
    ]
   },
@@ -545,7 +537,7 @@
    "metadata": {},
    "source": [
     "#### Manual  \n",
-    "Option 1: Use the manual approach for small datasets or when you have specific requirements and need precise control."
+    "Option 1: Define semantic column types manually for small datasets or when you have specific requirements and need precise control."
    ]
   },
   {
@@ -555,7 +547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Show storage data types\n",
+    "# Identify storage data types\n",
     "df.dtypes()"
    ]
   },
@@ -578,7 +570,7 @@
    "metadata": {},
    "source": [
     "#### Programmatic  \n",
-    "Option 2: Use the programmatic approach for large datasets or when you need to automate the process, ensuring efficiency and scalability in handling column types."
+    "Option 2: Define semantic column types programmatically for large datasets or when you need to automate the process, ensuring efficiency and scalability."
    ]
   },
   {
@@ -588,7 +580,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Define semantic column types programmatically based on pandas data types\n",
+    "# Define semantic column types programmatically based on storage data types\n",
     "numerical_columns = df.select_dtypes(include=[\"int64\", \"float64\"]).columns.tolist()\n",
     "categorical_columns = df.select_dtypes(include=[\"object\"]).columns.tolist()\n",
     "boolean_columns = df.select_dtypes(include=[\"bool\"]).columns.tolist()"
@@ -741,7 +733,7 @@
    "id": "6c0c06ef-bbbf-4d18-bde4-e7a50fc1a1a3",
    "metadata": {},
    "source": [
-    "Imputation for numerical column:"
+    "Imputate missing values in a numerical column using the median. "
    ]
   },
   {
@@ -772,7 +764,7 @@
    "id": "8018d4b9-c440-4b15-aafb-a4bb3a3e79fa",
    "metadata": {},
    "source": [
-    "Imputation for categorical column:"
+    "Imputate missing values in a categorical column using the mode (most frequent value)."
    ]
   },
   {
@@ -803,7 +795,8 @@
    "id": "ed9519b6-a492-4308-abc0-89a470543652",
    "metadata": {},
    "source": [
-    "### Deletion"
+    "### Deletion\n",
+    "Delete rows with missing values on any column or a subset of columns."
    ]
   },
   {
@@ -991,7 +984,7 @@
    "metadata": {},
    "source": [
     "### CSV  \n",
-    "Save preprocessed data from a Pandas DataFrame to a `csv` file in the `data` directory."
+    "Save preprocessed data from a Pandas DataFrame to a `.csv` file in the `data` directory."
    ]
   },
   {
@@ -1007,7 +1000,7 @@
     "# Create data directory if it doesn't exist\n",
     "os.makedirs(\"data\", exist_ok=True)\n",
     "\n",
-    "# Save as csv  \n",
+    "# Save as .csv  \n",
     "df.to_csv(\"data/preprocessed_data.csv\", index=False)"
    ]
   },
@@ -1017,7 +1010,7 @@
    "metadata": {},
    "source": [
     "### MySQL  \n",
-    "Save preprocessed data from a Pandas DataFrame to a MySQL table.  \n",
+    "Save preprocessed data from a Pandas DataFrame to a MySQL database table.  \n",
     "Note: Make sure `sql_username` and `sql_password` were imported as environment variables."
    ]
   },
